--- a/style.css
+++ b/style.css
@@ -1,168 +1,141 @@
-
-* {
-    margin: 0;
-    padding: 0;
-
-}
-
-body {
-    background-color: #eff1f2;
-    font-family: sans-serif;
-}
-
-.content {
-  grid-area: content;
-}
-.sidebar{
-  grid-area: sidebar;
-  background: linear-gradient(to right, rgba(200,107,142,1), rgba(218,105,250,1),
-   rgba(110,125,253,1)) ;
-  justify-content: center;
-}
-.footer {
-  grid-area: footer;
-  background: white;
-}
-.container {
-  font-size: 1.5em;
-  width: 100%;
-  height: 100;
-  height: 100vh;
-  display: grid;
-  grid-template-areas: "sidebar" "content" "footer";
-  grid-template-columns: 1fr;
-  grid-template-rows: 130px 800px 250px;
-
-}
-
-.content, .sidebar, .footer{
-  padding: 1em;
-}
-
-nav ul {
-  margin: 0;
+body{
   padding: 0;
-  display: flex;
-  justify-content: space-between;
-  text-align: center;
-}
-
-nav li{
-  list-style: none;
-  padding: 1em 0;
-}
-
-nav li a {
-  color: white;
-  font-weight: 700;
-  opacity: 0.6;
-  text-decoration: none;
-  transition: 0.3s;
-}
-
-nav li a:hover {
-  opacity: 1;
-}
-.hero {
-  max-width: 90 px;
+  margin: 0;
+ }
+ 
+ .container{
+  width: 1000px;
+  height:780px;
   margin: 0 auto;
-  text-align: center;
-}
-
-.hero img {
+ }
+ .banner{
+  width: 100%;
+  height: 120px;
+  background: #019875;
+ }
+ .logo{
+  width: 70px;
+  height: 70px;
+  margin:40px 10px 0 20px; 
+  float: left;
+ }
+ .title{
+  margin:44px 20px 0 0; 
+  float: left;
+  font-size: 36px;
+  text-shadow: 1px 3px 5px red;
+  color: #fff;
+ }
+ .text-title{
+  font-size: 13px;
+  color: #fff;
+  text-shadow: none;
+ }
+ .alamat{
+  float: right;
+  margin:20px;
+  color: #fff;
+ }
+ .content{
+  width: 100%;
+  height: 450px;
+ }
+ .iklan{
+  width: 800px;
+  border-bottom:3px solid #019875;
+  float: left;
+  padding: 3px 0;
+ }
+ .content-kiri{
   width: 200px;
-}
-
-.hero h1 {
-  font-size: 2em;
-  font-weight: 300;
-  color: #373046;
-}
-
-.hero p {
-  font-weight: 300;
-  line-height: 1.3em;
-  color: #98aBad;
-}
-
-.action-btn {
-  display: inline-block;
-  text-decoration: none;
-  color: white;
-  font-weight: 700;
-  background: #567bfb;
-  padding: 0.5em 2em;
-  border-radius: 60px;
-  margin: 1em 0;
-  transition: 0.3s;
-}
-
-footer ul {
-max-width: 640px;
-margin: 2em auto;
-padding: 0;
-text-align: center;
-display: flex;
-flex-direction: row;
-
-}
-
-footer ul li {
-  list-style: none;
-  align-self: flex-end;
-}
-
-footer ul li a{
-  text-decoration: none;
-  color: #c1c6ce;
-}
-
-footer ul li img {
-  width: 30%;
-}
-
-footer p {
-  font-size: 0.8em;
-}
-
-@media (min-width: 1040px){
-  .container {
-      grid-template-areas:"sidebar content" "sidebar footer" ;
-      grid-template-rows: 1fr auto ;
-      grid-template-columns: 300px 1f;
+  height: 615px;
+  float: left;
+  background: #eee;
+ }
+ .content-kanan{
+  width: 200px;
+  height: 450px;
+  float: left;
+  background: #eee;
+ }
+ .content-tengah{
+  width: 800px;
+  height: 615px;
+  float: left;
+  background: #eee;
+ }
+ .isi-content{
+  width: 200px;
+  height: 220px;
+  margin:10px 30px;
+  float: left;
+ }
+ .text-content{
+  text-align: center;
+  margin: 2px 0;
+  color: #019875;
+  font-weight: bold;
+ }
+ .pagging{
+  width: 760px;
+  padding: 20px;
+  float: left;
+ }
+ .number{
+  width: 300px;
+  height: 20px;
+  margin:0 auto;
+  color:#019875;
+ }
+ .number1{
+  float: left;
+  border: 1px solid #019875;
+  padding: 10px 20px;
+ }
+ .footer{
+  width: 1000px;
+  padding: 20px 0;
+  background: #019875;
+  float: left;
+  text-align: center;
+  color: #fff;
+ }
+ .promo{
+  width: 175px;
+  padding: 10px;
+  height: 143px;
+  border:1px solid #019875;
+ }
+ .navigation ul {
+  list-style-type: none;
+  margin: 0;
+  margin-left: -40px;
+ } 
+ .navigation ul a {
+   text-decoration: none; 
+   color: #fff;
+  } 
+  .navigation ul li { 
+   padding:5px; 
+   background: #019875; 
+  border: 1px solid #fff;
+  } 
+  .navigation ul li:hover { 
+   background: #26A65B; 
+  } 
+  .navigation li ul { 
+   display:none; 
+   position:absolute; 
+  } 
+  .navigation li:hover ul{ 
+   display:block; 
+   width: 200px;
+   margin-top:-25px; 
+   margin-left:155px; 
+  } 
+  .sub{
+   display: none !important;
   }
-
-  nav ul{
-      display: flex;
-      justify-content: space-between;
-      flex-direction: column;
-  }
-  .sidebar{
-      background: linear-gradient( rgba(200,107,142,1), rgba(218,105,250,1),
-      rgba(110,125,253,1)) ;
-      padding-top: 10em;
-  }
-  .hero{
-      text-align: left;
-      margin: 7em 0;
-  }
-  .hero img {
-      width: 200px;
-      float: right;
-  }
-  .hero h1{
-      font-size: 3em;
-  }
-  .hero p{
-      width: 60%;
-  }
-  footer ul {
-      max-width: 900px;
-      margin: 0 auto;
-      padding: 1em 0;
-  }
-
-  footer ul li a img {
-      width: 20%;
-  }
-}
+ .navigation ul li ul li:hover .sub{
+  display: block !important;
+ }
