--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body{
  .banner{
   width: 100%;
   height: 120px;
-  background: #D06224;
+  background: #ECB365;
  }
  .logo{
   width: 70px;
@@ -85,17 +85,17 @@ body{
   width: 300px;
   height: 20px;
   margin:0 auto;
-  color:#D06224;
+  color:#ECB365;
  }
  .number1{
   float: left;
-  border: 1px solid #D06224;
+  border: 1px solid #ECB365;
   padding: 10px 20px;
  }
  .footer{
   width: 1000px;
   padding: 20px 0;
-  background: #D06224;
+  background: #ECB365;
   float: left;
   text-align: center;
   color: #fff;
@@ -104,7 +104,7 @@ body{
   width: 175px;
   padding: 10px;
   height: 143px;
-  border:1px solid #D06224;
+  border:1px solid #ECB365;
  }
  .navigation ul {
   list-style-type: none;
@@ -117,7 +117,7 @@ body{
   } 
   .navigation ul li { 
    padding:5px; 
-   background: #D06224; 
+   background: #ECB365; 
   border: 1px solid #fff;
   } 
   .navigation ul li:hover { 
