--- a/sangdonuts/index.css
+++ b/sangdonuts/index.css
@@ -9,7 +9,7 @@ body {
 
 /*Jumbotron*/
 .jumbotron {
-	background-image: url(images/background/aa.jpg);
+	background-image: url(images/background/menu2.jpg);
 	background-size: cover;
 	height: 350px;
 	width: 100%;
